--- a/tweets.css
+++ b/tweets.css
@@ -4,7 +4,7 @@
 */
 
 * {
-   font-size:18px;    
+   font-size:22px;    
 }
 
 h2 {
@@ -25,7 +25,7 @@ ul li {
   width:538px;
   list-style:none;
   overflow:hidden;
-  border:1px solid #dedede;
+  border:none;
   margin:10px 0px 10px 0px;
   padding:10px;
 }
